# n-time-model-teclave-trustzone

./: .gitmodules  README.md  build_optee_libraries.sh  setup.sh
examples/one_time_sort-rs/host/: Cargo.toml
examples/one_time_sort-rs/host/src/: main.rs
examples/one_time_sort-rs/proto/src/: lib.rs
examples/token_flow-rs/: Makefile  uuid.txt
examples/token_flow-rs/host/: Cargo.toml  Makefile
examples/token_flow-rs/host/src/: main.rs
examples/token_flow-rs/proto/: Cargo.toml
examples/token_flow-rs/proto/src/: lib.rs
examples/token_flow-rs/ta/: Cargo.toml  Makefile  build.rs  private_key.pem
examples/token_flow-rs/ta/src/: main.rs  restrict.rs
export-ta_arm64/host_include/: conf.cmake  conf.h  conf.mk  pta_jetson_ftpm_helper.h
export-ta_arm64/include/: mbedtls_config_uta.h
export-ta_arm64/mk/: conf.mk
export-ta_arm64/ta/: 023f8f1a-292a-432b-8fc4-de8471358067.ta  80a4c275-0a47-4905-8285-1486a9771a08.ta  f04a0fe7-1f5d-4b9b-abf7-619b85b4ce8c.ta  fd02c9da-306c-48c7-a49c-bbd827ae86ee.ta
n_time_model/: Cargo.toml
n_time_model/src/: lib.rs
projects/one-time-sort/: uuid.txt
projects/one-time-sort/host/: Makefile
projects/one-time-sort/host/src/: main.rs
projects/one-time-sort/ta/: Cargo.toml
projects/one-time-sort/ta/src/: main.rs
projects/reset/: uuid.txt
projects/reset/host/: Cargo.toml  Makefile
projects/reset/host/src/: main.rs
projects/reset/proto/src/: lib.rs
projects/reset/ta/src/: main.rs
utils/token-gen/: Cargo.toml
utils/token-gen/src/: main.rs
